# ytdl-archiver

./: .coverage  .coverage.Mac.pid39394.XVWA9nhx.HNQIp837rWOh  .coverage.Mac.pid54349.Xx6Ob5ox.HNQIp837rWOh  .gitignore  CHANGELOG.md  MIGRATION.md  README.md  archive.py  install.ps1  install.sh  playlists.json  playlists.toml  pyproject.toml
.github/workflows/: ci.yml  release.yml
config/: example.toml
dependancies/yt_dlp-2024.11.18.dist-info/: RECORD
docs/: cli.md  configuration.md  development.md  index.md  terminal-output.md
docs/releases/: 0.3.0.md
docs/system-process/linux/: systemctl.md
optional/: ytdl-archiver.service
rust/setup_tui/: Cargo.toml
rust/setup_tui/src/: app.rs  events.rs  main.rs  model.rs  state.rs  ui.rs
scripts/: stage_setup_tui_binary.py
src/ytdl_archiver/: __init__.py  __main__.py  ascii_logo.txt  cli.py  exceptions.py  output.py
src/ytdl_archiver/config/: __init__.py  defaults.toml  settings.py
src/ytdl_archiver/core/: __init__.py  archive.py  artifacts.py  cookies.py  dedupe.py  downloader.py  metadata.py  metadata_backfill.py  playlist_writer.py  progress.py  search.py  sidecars.py  utils.py  ydl_options.py
src/ytdl_archiver/setup/: __init__.py  fallback_prompts.py  models.py  ratatui_bridge.py  runner.py  templates.py  textual_app.py  writer.py
tests/: __init__.py  conftest.py
tests/test_cli/: test_cli.py
tests/test_config/: test_settings.py
tests/test_core/: test_archive.py  test_cookies.py  test_dedupe.py  test_downloader.py  test_exceptions.py  test_metadata.py  test_metadata_backfill.py  test_playlist_writer.py  test_search.py  test_utils.py
tests/test_integration/: test_workflows.py
tests/test_output/: test_output.py
tests/test_setup/: test_ratatui_bridge.py  test_writer.py
tests/test_version/: test_package_version.py
tests/unit/: test_toml_playlists.py  test_utils.py
