[project]
name = "ytdl-archiver"
version = "2026.2.7"
description = "Modern YouTube playlist archiver with media server metadata support"
readme = "README.md"
requires-python = ">=3.14"
license = {text = "Unlicense"}
authors = [
    {name = "Ben Chitty", email = "htmlgxn@pm.me"},
]
keywords = ["youtube", "archiver", "media-server", "jellyfin", "emby"]
dependencies = [
    # Core runtime
    "yt-dlp>=2026.2.4",
    # JS runtime integration used by yt-dlp ecosystem features
    "yt-dlp-ejs>=0.4.0",
    "deno>=2.6.10",
    "toml>=0.10.2,<0.11.0",
    "structlog>=24.2.0,<25.0.0",
    "tenacity>=9.0.0,<10.0.0",
    "click>=8.1.7,<9.0.0",
    "pathvalidate>=3.0.0,<4.0.0",
    "tqdm>=4.66.0,<5.0.0",
    "colorama>=0.4.6,<0.5.0",
    "textual>=1.0.0,<2.0.0",
]
[dependency-groups]
dev = [
    "ruff>=0.15.0",
    "ty>=0.0.15",
    "pytest>=8.3.0,<9.0.0",
    "pytest-cov>=6.0.0,<7.0.0",
    "pytest-mock>=3.14.0,<4.0.0",
    "pre-commit>=4.0.0,<5.0.0",
]

[project.scripts]
ytdl-archiver = "ytdl_archiver.cli:main"

[project.urls]
Homepage = "https://github.com/htmlgxn/ytdl-archiver"
Repository = "https://github.com/htmlgxn/ytdl-archiver"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RET", "RSE", "ARG", "PTH", "TRY", "PGH", "RUF"]
ignore = ["E501", "TRY003", "TRY300"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.rules]
unresolved-attribute = "ignore"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=src/ytdl_archiver --cov-report=html --cov-report=term-missing"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["src/ytdl_archiver"]
omit = ["*/tests/*", "*/test_*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]
