[project]
name = "ytdl-archiver"
version = "0.2.5"
description = "Modern Python CLI for archiving YouTube playlists with media-server metadata support"
readme = "README.md"
requires-python = ">=3.14"
authors = [
    {name = "Ben Chitty", email = "htmlgxn@pm.me"},
]
keywords = ["youtube", "archive", "yt-dlp", "media-server", "cli"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Video",
    "Topic :: Utilities",
    "Environment :: Console",
]
license = "Unlicense"
license-files = ["LICEN[CS]E*"]

dependencies = [
    # Core runtime
    "yt-dlp>=2026.2.4",
    # yt-dlp JS integration helpers (runtime JS engine is an external tool)
    "yt-dlp-ejs>=0.4.0",
    "toml>=0.10.2,<0.11.0",
    "structlog>=24.2.0,<25.0.0",
    "tenacity>=9.0.0,<10.0.0",
    "click>=8.1.7,<9.0.0",
    "pathvalidate>=3.0.0,<4.0.0",
    "tqdm>=4.66.0,<5.0.0",
    "colorama>=0.4.6,<0.5.0",
]
[dependency-groups]
dev = [
    "ruff>=0.15.0",
    "ty>=0.0.15",
    "pytest>=8.3.0,<9.0.0",
    "pytest-cov>=6.0.0,<7.0.0",
    "pytest-mock>=3.14.0,<4.0.0",
    "pre-commit>=4.0.0,<5.0.0",
    "twine>=6.2.0",
]

[project.scripts]
ytdl-archiver = "ytdl_archiver.cli:main"

[project.urls]
Homepage = "https://github.com/htmlgxn/ytdl-archiver"
Repository = "https://github.com/htmlgxn/ytdl-archiver"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RET", "RSE", "ARG", "PTH", "TRY", "PGH", "RUF"]
ignore = ["E501", "TRY003", "TRY300"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.rules]
unresolved-attribute = "ignore"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=src/ytdl_archiver --cov-report=html --cov-report=term-missing"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["src/ytdl_archiver"]
omit = ["*/tests/*", "*/test_*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]
